--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="container-fluid">
         <div class="row">
-            <nav class="navbar fixed-top">
+            <nav class="navbar fixed-top navbar-expand-lg">
                 <a class="" href="" data-="ir aL INICIO" id="icono"><img src="images/iconoPelis.jpg" alt=""
                         height="25px"> CAC-movies</a>
 
@@ -35,15 +35,18 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a href="">Tendencias</a>
+                            <a href="#section03">Tendencias</a>
                         </li>
                         <li class="nav-item">
-                            <a href="">Registrarse</a>
+                            <a href="./session/registrarse.html">Registrarse</a>
                         </li>
                         <li class="nav-item">
-                            <a href=""><button> Iniciar Sesion</button></a>
+                            <a href="./session/iniciarSesion.html"><button> Iniciar Sesion</button></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./api/api.html"><button>API</button></a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +66,7 @@
             <div class="div">
                 <p>Cancela en cualquier momento</p>
             </div>
-            <div class="div"><a href=""><button id="registrate" draggable="true">Registrate</button></a></div>
+            <div class="div"><a href="./session/registrarse.html"><button id="registrate" draggable="true">Registrate</button></a></div>
         </section>
 
         <section id="section02" class="container-fluid">
@@ -112,13 +115,13 @@
 
     <footer class="container-fluid">
         <nav>
-          
-                <a href="">Terminos y condiciones</a>
-                <a href="">Preguntas frecuentes</a>
-                <a href="">Ayuda</a>
-                <a href=""><button>Administrador Peliculas</button></a>
-                <a href="#" title="ir al INICIO">⏏</a>
-        
+
+            <a href="">Terminos y condiciones</a>
+            <a href="">Preguntas frecuentes</a>
+            <a href="">Ayuda</a>
+            <a href=""><button>Administrador Peliculas</button></a>
+            <a href="#" title="ir al INICIO">⏏</a>
+
         </nav>
     </footer>
 
